Fix Render deployment: change main to server_dist to prevent client/index.js execution

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-app",
-  "main": "client/index.js",
+  "main": "server_dist/index.js",
   "version": "1.0.0",
   "scripts": {
     "start": "npm run server:prod",
