--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-app",
-  "main": "server_dist/index.js",
+  "main": "dist/server_dist/index.js",
   "version": "1.0.0",
   "scripts": {
     "start": "npm run server:prod",
@@ -9,9 +9,9 @@
     "all:dev": "npm run expo:dev & npm run server:dev",
     "expo:start:static:build": "EXPO_PUBLIC_DOMAIN=$REPLIT_INTERNAL_APP_DOMAIN npx expo start --no-dev --minify --localhost",
     "expo:static:build": "node scripts/build.js",
-    "server:build": "esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=server_dist",
-    "build:web": "npx expo export --platform web",
-    "server:prod": "NODE_ENV=production node server_dist/index.js",
+    "server:build": "esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist/server_dist",
+    "build:web": "npx expo export --platform web --output-dir dist",
+    "server:prod": "NODE_ENV=production node dist/server_dist/index.js",
     "db:push": "drizzle-kit push",
     "lint": "npx expo lint",
     "lint:fix": "npx expo lint --fix",
