--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "main": "dist/server_dist/index.js",
   "version": "1.0.0",
   "scripts": {
-    "start": "npm run server:prod",
+    "start": "cd dist && go run main.go",
     "expo:dev": "npx expo start --localhost --port 8083",
     "server:dev": "NODE_ENV=development tsx server/index.ts",
     "all:dev": "npm run expo:dev & npm run server:dev",
