--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "main": "dist/server_dist/index.js",
   "version": "1.0.0",
   "scripts": {
-    "start": "cd dist && go run main.go",
+    "start": "NODE_ENV=production node dist/server_dist/index.js",
     "expo:dev": "npx expo start --localhost --port 8083",
     "server:dev": "NODE_ENV=development tsx server/index.ts",
     "all:dev": "npm run expo:dev & npm run server:dev",
@@ -30,10 +30,8 @@
     "@react-navigation/native-stack": "^7.3.16",
     "@stripe/stripe-react-native": "^0.57.2",
     "@tanstack/react-query": "^5.90.7",
-    "@types/better-sqlite3": "^7.6.13",
     "@types/multer": "^2.0.0",
     "bcrypt": "^5.1.1",
-    "better-sqlite3": "^12.5.0",
     "drizzle-orm": "^0.39.3",
     "drizzle-zod": "^0.7.0",
     "expo": "^54.0.23",
