--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "react-native-svg": "15.12.1",
     "react-native-web": "~0.21.0",
     "react-native-webview": "13.15.0",
+    "react-native-pdf": "^6.7.4",
     "react-native-worklets": "0.5.1",
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5",
