--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "server:prod": "NODE_ENV=production node dist/server_dist/index.js",
     "db:push": "drizzle-kit push",
     "db:add-columns": "node scripts/add-missing-columns.js",
+    "db:migrate-to-postgres": "node scripts/migrate-to-postgres.js",
     "lint": "npx expo lint",
     "lint:fix": "npx expo lint --fix",
     "check:types": "tsc --noEmit",
@@ -58,6 +59,7 @@
     "multer": "^2.0.2",
     "pg": "^8.16.3",
     "postgres": "^3.4.4",
+    "postgres-js": "^0.1.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
@@ -65,13 +67,13 @@
     "react-native-gesture-handler": "~2.28.0",
     "react-native-keyboard-controller": "1.18.5",
     "react-native-modal-datetime-picker": "^18.0.0",
+    "react-native-pdf": "^6.7.4",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
     "react-native-web": "~0.21.0",
     "react-native-webview": "13.15.0",
-    "react-native-pdf": "^6.7.4",
     "react-native-worklets": "0.5.1",
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5",
